--- a/scripts/27-FunctionalAnnotationPlot.Rmd
+++ b/scripts/27-FunctionalAnnotationPlot.Rmd
@@ -32,17 +32,22 @@ library(RColorBrewer)
 Load data 
 
 ```{r}
-functional_clock <- read.csv("data/functional_clock.csv") %>% dplyr::select(-X)
+functional_clock <- read.csv("data/06_genomic_function/functional_clock.csv") %>% dplyr::select(-X)
 length(unique(functional_clock$Loc)) ##81
 
-functional_100p <- read.csv("data/functional_100p.csv") %>% dplyr::select(-X)
-length(unique(functional_100p$Loc))
+# folder is zipped 
+# functional_100p <- read.csv("data/06_genomic_function/functional_100p.csv") %>% dplyr::select(-X)
+# length(unique(functional_100p$Loc))
+
+functional_90p <- read.csv("data/06_genomic_function/functional_90p.csv") %>% dplyr::select(-X)
+length(unique(functional_90p$Loc)) # 33,703
 ```
 
 ```{r}
 # 1. Read data
-clock_data <- read.csv("data/clock_data.csv") %>% dplyr::select(-X)
-full100_data <- read.csv("data/full100p_data.csv") %>% dplyr::select(-X)
+clock_data <- read.csv("data/04_age_prediction/clock_data.csv") %>% dplyr::select(-X)
+full100_data <- read.csv("data/04_age_prediction/full100p_data.csv") %>% dplyr::select(-X)
+full90_data <- read.csv("data/04_age_prediction/full90p_data.csv") %>% dplyr::select(-X)
 
 # 2. Prepare clock_matrix (rows: Loc, columns: GMGI_ID)
 clock_matrix <- clock_data %>% 
@@ -51,12 +56,19 @@ clock_matrix <- clock_data %>%
 clock_matrix <- as.matrix(clock_matrix)
 clock_matrix <- clock_matrix[, sample_order]
 
-# 3. Prepare full100_matrix (not used here, but you have it)
+# 3a. Prepare full100_matrix  
 full100_matrix <- full100_data %>%
   dplyr::select(Loc, sample, percent.meth) %>%
   spread(sample, percent.meth) %>%
   column_to_rownames(var = "Loc")
 full100_matrix <- as.matrix(full100_matrix)
+
+# 3b. Prepare full90_matrix  
+full90_matrix <- full90_data %>%
+  dplyr::select(Loc, sampleID, percent.meth) %>%
+  spread(sampleID, percent.meth) %>%
+  column_to_rownames(var = "Loc")
+full90_matrix <- as.matrix(full90_matrix)
 
 # 4. Read in prediction data for the Ages of individuals used
 best_clock <- read.csv("data/04_age_prediction/predictions.csv") %>% dplyr::select(GMGI_ID, AgeRounded) %>% arrange(AgeRounded)
@@ -66,6 +78,7 @@ age_order <- best_clock$AgeRounded
 # 5. Order the matrices by the Age
 clock_matrix <- clock_matrix[, sample_order]
 full100_matrix <- full100_matrix[, sample_order]
+full90_matrix <- full90_matrix[, sample_order]
 ```
 
 Heatmap for clock loci
@@ -112,14 +125,9 @@ ht <-
 )
 ht_drawn <- draw(ht)
 dev.off()
-
-
-
-############
 ```
 
-
-Heatmap for clock loci
+Heatmap for 100% loci
 
 ```{r}
 # Z-score by row (locus-wise)
@@ -138,7 +146,7 @@ hm_ann_col_full <- HeatmapAnnotation(
 
 z_col_fun <- colorRamp2(c(-2, 0, 2), c("white", "white", "#013a63"))
 
-pdf("manuscript figures/Figure4_heatmap_fullv2.pdf")
+pdf("manuscript figures/Figure4_heatmap_100p_v2.pdf")
 ht_full <- 
   Heatmap(
   full100_matrix_z,
@@ -164,69 +172,57 @@ ht_full <-
 )
 ht_full_drawn <- draw(ht_full)
 dev.off()
-
-
-
-############
 ```
 
-Trying another heatmap package 
+Heatmap for 90% loci
 
 ```{r}
-# # age_levels <- sort(unique(best_clock$AgeRounded))
-# # age_levels_chr <- as.character(age_levels)
-# # 
-# # nb.cols <- length(age_levels_chr)
-# # age_colors <- colorRampPalette(brewer.pal(8, "Set2"))(nb.cols)
-# # names(age_colors) <- age_levels_chr
-# # col_side_colors <- age_colors[as.character(best_clock$AgeRounded)]
-# 
-# # gradient_fn <- colorRampPalette(c("#0077b6", "#caf0f8"))
-# gradient_fn <- colorRampPalette(c("#d8f3dc", "#3a5a40"))
-# age_values <- best_clock$AgeRounded
-# # Rank or rescale ages to get color indices
-# age_ranks <- rank(age_values, ties.method = "first")
-# col_side_colors <- gradient_fn(length(age_values))[age_ranks]
-# 
-# # Compute distance and clustering as before
-# row_dist <- as.dist(1 - cor(t(clock_matrix), use = "pa"))
-# row_hclust <- hclust(row_dist, method = "average")
-# row_dend <- as.dendrogram(row_hclust)  # Do NOT use color_branches()
-# 
-# # Find cluster break for rowsep (as before)
-# row_clusters <- cutree(row_hclust, k = 2)
-# row_order <- order.dendrogram(row_dend)
-# cluster_assignments <- row_clusters[row_order]
-# cluster_change <- which(diff(cluster_assignments) != 0)
-# 
-# 
-# ## Heatmap
-# #pdf("manuscript figures/Figure4_heatmap.pdf")
-# heatmap.2(clock_matrix,
-#   cexCol = 1.5, 
-#   distfun = function(x) as.dist(1 - cor(t(x), use = "pa")), 
-#   hclustfun = function(x) hclust(x, method = 'average'),
-#   key.xtickfun = function() {
-#     breaks = pretty(parent.frame()$breaks)
-#     breaks = breaks[c(1, length(breaks))]
-#     list(at = parent.frame()$scale01(breaks), labels = breaks)
-#   },
-#   Colv = FALSE, 
-#   col = rev(RColorBrewer::brewer.pal(name = "RdBu", n = 10)), #RdYlBu
-#   density.info = "none", 
-#   dendrogram = "row",
-#   trace = "none", 
-#   scale = "row", 
-#   labRow = FALSE,
-#   labCol = FALSE,
-#   ColSideColors = col_side_colors,   
-#   sepcolor = "black",
-#   sepwidth = c(0.1, 0.01),
-#   #Rowv = row_dend,
-#   #rowsep = cluster_change,
-# )
-# #dev.off()
+# Z-score by row (locus-wise)
+full90_matrix_z <- t(scale(t(full90_matrix)))
+full90_matrix_z <- full90_matrix_z[, sample_order]
+
+# Now plot the heatmap using your parameters
+age_annot_full <- best_clock$AgeRounded[match(colnames(full90_matrix_z), best_clock$GMGI_ID)]
+
+# 2. Create top annotation
+hm_ann_col_full <- HeatmapAnnotation(
+  Age = age_annot_full,
+  col = list(Age = colorRamp2(range(age_annot_full, na.rm = TRUE), c("#d8f3dc", "#3a5a40"))),
+  annotation_name_side = "left"
+)
+
+z_col_fun <- colorRamp2(c(-2, 0, 2), c("white", "white", "#013a63"))
+
+pdf("manuscript figures/Figure4_heatmap_90p_v2.pdf")
+ht_full <- 
+  Heatmap(
+  full90_matrix_z,
+  column_title = "",
+  name = "z-score",
+  show_row_names = FALSE,
+  top_annotation = hm_ann_col_full,
+  show_column_names = FALSE,
+  cluster_columns = FALSE,
+  row_dend_side = "left",
+  row_dend_width = unit(2, "mm"),
+  column_dend_height = unit(0.5, "in"),
+  km = 2,
+  col = z_col_fun,
+  row_km_repeats = 100,
+  row_gap = unit(2.5, "mm"),
+  row_title = c("Cluster1", "Cluster2"),
+  border = TRUE,
+  column_names_gp = gpar(fontsize = 8),
+  # Adjust these to control cell size:
+  width = unit(12, "cm"),   # Narrower width = smaller column boxes
+  height = unit(12, "cm")  # Shorter height = smaller row boxes
+)
+ht_full_drawn <- draw(ht_full)
+dev.off()
 ```
+
+
+
 
 
 Cluster Loci to then map function 
@@ -253,30 +249,36 @@ cluster_information %>% dplyr::select(Name, cluster) %>%
 ```
 
 
-Cluster Loci to then map function for full set
+Cluster Loci to then map function for 100% set
 
 ```{r}
+which_matrix <- full90_matrix_z
+
 # Get the row indices for each cluster
 cluster1_full_rows <- row_order(ht_full_drawn)[[1]]
 cluster2_full_rows <- row_order(ht_full_drawn)[[2]]
 
 # Get the row names (assuming rownames(clock_matrix_z) are your feature names)
-cluster1_full_names <- as.data.frame(rownames(full100_matrix_z)[cluster1_full_rows]) %>% 
-  rename(Loc=1) %>% mutate(cluster="1") ## 3,554 loci
+cluster1_full_names <- as.data.frame(rownames(which_matrix)[cluster1_full_rows]) %>% 
+  rename(Loc=1) %>% mutate(cluster="1") ## 3,554 loci for 100% ; 28,762 loci for 90%
 
-cluster2_full_names <- as.data.frame(rownames(full100_matrix_z)[cluster2_full_rows]) %>% 
-  rename(Loc=1) %>% mutate(cluster="2") ## 4,177 loci
+cluster2_full_names <- as.data.frame(rownames(which_matrix)[cluster2_full_rows]) %>% 
+  rename(Loc=1) %>% mutate(cluster="2") ## 4,177 loci; 18,611 loci for 90%
 
 names_full_total <- bind_rows(cluster1_full_names, cluster2_full_names)
 
 ## Cluster df 
-cluster_full_information <- functional_100p %>% full_join(., names_full_total, by = "Loc")
+cluster_full_information <- functional_90p %>% 
+  mutate(Loc=gsub("\\|", "_", Loc),
+         Loc=gsub(" ", "_", Loc)) %>%
+  full_join(., names_full_total, by = "Loc")
 
-cluster_full_information %>% group_by(cluster, Note) %>% summarise(count = n_distinct(Loc))# %>% #write_xlsx("data/functional_notes.xlsx")
+cluster_full_information %>% group_by(cluster) %>% summarise(count = n_distinct(Name))# %>% #write_xlsx("data/functional_notes.xlsx")
 
 ### Export gene list 
 cluster_full_information %>% dplyr::select(Name, cluster) %>%
-  mutate(Name = gsub("Name=", "", Name)) %>% write.csv("data/06_genomic_function/cluster_full_genelist.csv", row.names = FALSE)
+  #mutate(Name = gsub("Name=", "", Name)) %>% 
+  write.csv("data/06_genomic_function/cluster_90p_genelist.csv", row.names = FALSE)
 ```
 
 
